# auth-server

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  openapi.yaml  reset_advanced.sql  set_admin.sql
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  sdk-ci.yml  sdk-release.yml
.kiro/steering/: ai-feature-prompts.md  rust-coding-standards.md
cloudflare-oauth-worker/: .dev.vars.example  .gitignore  README.md  package.json  wrangler.toml
cloudflare-oauth-worker/src/: index.js
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md
docker/mysql/: init.sql
docker/nginx/: dev-ssl.conf  dev.conf  frontend.conf  nginx.conf
docs/: MY_APPS_AND_OAUTH_CLIENTS_GUIDE.md  SDK_INTEGRATION_GUIDE.md  WEBHOOKS_AND_IP_RULES_GUIDE.md
examples/: set_admin.rs
examples/oauth-demo/: README.md  app.js  callback.html  index.html  style.css
examples/resource-server-demo/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
keys/: private.pem  public.pem
migrations/: 20241229000001_initial_schema.sql  20241229000002_app_user_management.sql  20241229000003_app_secret_hash.sql  20241229000004_oauth2_external_access.sql  20241229000005_user_management_features.sql  20241229000006_security_enhancements.sql  20241229000007_mfa_pending_tokens.sql  20241229000008_advanced_features.sql  20241229000010_seed_oauth_scopes.sql  20241231000001_add_owner_to_oauth_clients.sql
proptest-regressions/repositories/: app.txt  user.txt
scripts/: generate-dev-certs.bat  setup-hosts.bat
sdk/: .npmignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdk-oauth/: .gitignore  README.md  package-lock.json  package.json
sdk-oauth/examples/: callback.html
sdk-oauth/src/: index.ts
sdk/src/: client.ts  index.ts  oauth.ts  types.ts
src/: config.rs  error.rs  main.rs
src/dto/: api_key.rs  app.rs  auth.rs  ip_rule.rs  (+8 more)
tests/: .env  01-admin.test.js  99-security.test.js  README.md  api-keys.test.js  apps.test.js  auth.test.js  globalSetup.js  health.test.js  helpers.js  ip-rules.test.js  jest.config.js  package-lock.json  package.json  roles.test.js  seed-users.js  setup-admin.js  setup.js  user-profile.test.js  webauthn.test.js  webhooks.test.js
(+231 files in other folders)
