[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "uuid", "chrono"] }

# Password hashing
argon2 = "0.5"
bcrypt = "0.15"

# Secret generation
rand = "0.8"

# JWT
jsonwebtoken = "9"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
regex = "1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
