[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "uuid", "chrono"] }

# Password hashing
argon2 = "0.5"
bcrypt = "0.15"

# Cryptography
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"

# Secret generation
rand = "0.8"

# JWT
jsonwebtoken = "9"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
regex = "1"

# URL encoding
urlencoding = "2"

# TOTP for MFA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# HTTP client for webhooks
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
